--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: lemonstar99@korea.ac.kr
 description: >- # this means to ignore newlines until "baseurl:"
   This is my personal blog.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://lemonstar99.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: X
 github_username:  lemonstar99
 
